# kanidm-provision

./: Cargo.toml  Dockerfile
.github/workflows/: rust.yml
docker/sidecar/: entrypoint.sh
src/: client.rs  lib.rs  main.rs  state.rs
