[package]
name = "kanidm-provision"
version = "1.3.0"
edition = "2021"
authors = ["oddlama <oddlama@oddlama.org>"]
description = "A small utility to help with kanidm provisioning"
license = "MIT"
publish = false

[[bin]]
name = "kanidm-provision"
path = "src/main.rs"

[[bin]]
name = "kanidm-provision-sidecar"
path = "src/bin/sidecar/main.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
futures = "0.3.32"
k8s-openapi = { version = "0.27.1", features = ["v1_35"] }
kube = { version = "3.1.0", features = ["runtime", "client"] }
reqwest = { version = "0.12.19", default-features = false, features = ["json", "rustls-tls-webpki-roots", "blocking", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
